--- a/index.html
+++ b/index.html
@@ -10,19 +10,23 @@
     <h1>Emotion Identification Tool</h1>
 
     <form id="emotionForm" onsubmit="return false;">
-      <!-- Step 1 -->
+
       <fieldset id="step1">
-        <button type="button" id="skipSensationsBtn">Skip and explore all emotions</button>
-        <legend>Sensations</legend>
-        <div id="sensationsContainer" role="region" aria-label="Sensations by body part">
+        <legend class="sr-only">Sensations</legend>
+        <div id="sensationsContainer" tabindex="-1" role="region" aria-label="Sensations by body part">
+          </br>
+          <h2>I notice...</h2>
+          <p>Select all the body sensations you are currently aware of feeling.</p>
+          <button type="button" id="skipSensationsBtn">Skip and explore all emotions</button>
+          </br>
         </div>
         <button type="button" id="step1Btn">Next</button>
       </fieldset>
 
       <!-- Step 2 -->
       <fieldset id="step2" class="hidden">
-        <legend>Core Emotion</legend>
-        <div id="emotionContainer" role="region" aria-label="Current core emotion">
+        <legend class="sr-only">Core Emotion</legend>
+        <div id="emotionContainer" tabindex="-1" role="region" aria-label="Current core emotion">
         </div>
         <button type="button" id="prevEmotionBtn">Back</button>
         <button type="button" id="nextEmotionBtn">Next Emotion</button>
@@ -30,8 +34,8 @@
 
       <!-- Step 3 -->
       <fieldset id="step3" class="hidden">
-        <legend>Summary</legend>
-        <div id="summaryContainer" role="region" aria-label="Summary"></div>
+        <legend class="sr-only">Summary</legend>
+        <div id="summaryContainer" tabindex="-1" role="region" aria-label="Summary of current body sensations, emotions and needs."></div>
         <button type="button" id="step3BackBtn" aria-controls="summaryContainer">Back</button>
         <button id="copyBtn">Copy Summary</button>
       </fieldset>
