--- a/emotionWheel.html
+++ b/emotionWheel.html
@@ -1,11 +1,8 @@
-<!-- This file combines the json data, scripts, and css so that it can be opened directly in a browser without requiring a server instance -->
-
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <title>Emotion Mapper</title>
-  <link rel="stylesheet" href="styles.css" />
   <style>
     .hidden { display: none; }
     fieldset { margin-bottom: 1.25rem; }
@@ -43,21 +40,35 @@
 <body>
   <main role="main">
     <h1>Emotion Identification Tool</h1>
-    <section id="tool-introduction">
-      <p>This tool is a screen reader accessible version of the emotion wheel created by Abby Vanmuijen. You can find the original version of her work <a href="https://www.avanmuijen.com/watercolor-emotion-wheel">here</a>.</p>
-      <h4> How to use this tool </h4>
-      You can use this tool both to reflect on your own emotions or to learn more about each emotion in general.
+    <p>This tool is a screen-reader-friendly version of the Emotion Wheel, created by Abby Vanmuijen. You can see her original version <a href="https://www.avanmuijen.com/watercolor-emotion-wheel">here</a>.</p>
+     <details>
+      <summary>How to use this tool</summary>
+      <p>You can use this tool in two ways: to reflect on your current emotions, or to explore and learn about emotions in general.</p>
       <ol>
-        <li>The first page presents a series of body sensations grouped by "head", "torso", and "limbs" that are often associated with different emotions. Take a moment to scan through your body and select any sensations you notice. The following pages will then include any core emotions that matched the selected body sensations.</li>
+        <li><strong>Body sensations.</strong> The first page shows groups of body sensations in three areas: head, torso, and limbs.</li>
           <ul>
-            <li>If you prefer, you can also skip this step by clicking the button that says "Skip and explore all emotions". This will let you read through every emotion in the following pages</li>
+            <li>Scan your body and choose any sensations you notice.</li>
+            <li>The tool will then show you emotions that are often linked to the sensations you selected.</li>
+            <li>If you do not want to choose sensations, click the button that says “Skip and explore all emotions.” This will let you view every emotion in the tool.</li>
           </ul>
-        <li>
-          The next set of pages each present a different core emotion along with their associated body sensations, specific feelings or subtypes of that emotion, and what that emotion might be telling you that you need. You can select any specific feeling and/or need that feels relevant to you in moment.
-        </li>
-        <li>Finally, the last page will summarize any selections you made on the previous pages for easy reference and further reflection. If you'd like, there is a button that lets you copy all of the text on the summary page so that you can paste it elsewhere-- for example, a journal or a message to a friend.</li>
+        <li><strong>Core emotions.</strong> Next, each page shows one core emotion.</li>
+          <ul>
+            <li>You will see:</li>
+            <ul>
+              <li>Body sensations linked to that emotion</li>
+              <li>Specific feelings or subtypes of that emotion</li>
+              <li>Needs that the emotion might point to</li>
+            </ul>
+            <li>Select any feelings or needs that seem true for you in the moment.</li>
+          </ul>
+        <li><strong>Summary.</strong>The final page shows a summary of everything you selected. This makes it easy to review and reflect.</li>
+          <ul>
+            <li>
+              You can also click a button to copy all the text and paste it somewhere else, such as a journal or a message to a friend.
+            </li>
+          </ul>
       </ol>
-    </section>
+    </details>
 
     <form id="emotionForm" onsubmit="return false;">
 
@@ -102,7 +113,7 @@
           "limbs":["wiggly limbs","wiggly hands/feet"]
         },
         "nuancedEmotions":["challenged","motivated","confident","brave","inspired","moved","passionate","empowered","interested","curious","creative","manic","focused","in flow","excited","silly","free","like myself","something else"],
-        "coreNeed": "expressing yourself",
+        "coreNeed": "to express myself",
         "nuancedNeeds": ["to share my wisdom","to sing","to dance","to play","to explore","to take action","to write","to make something","something else"]
       },
       "Joy": {
@@ -113,7 +124,7 @@
           "limbs":["relaxed limbs","soft hands","noticeable toes and feet"]
         },
         "nuancedEmotions":["calm","relief","satisfied","gratitude","grounded","present","settled","pleasure","awe","proud","acceptance","belonging","care","love","tender","intimate","connected","seen","something else"],
-        "coreNeed": "nothing! It generally means your needs are met in this moment",
+        "coreNeed": "nothing! Joy generally means all needs are met in this moment",
         "nuancedNeeds": ["savor it","celebrate!","rest","remember this for later","something else"]
       },
       "Disgust": {
@@ -186,8 +197,6 @@
     const copySummaryBtn = document.getElementById('copyBtn');
 
     async function loadDataset() {
-
-
       let sensations, sensation;
       for (const emotion in emotionData) {
         sensations = emotionData[emotion].sensations;
@@ -329,7 +338,7 @@
       });
 
       appendHTML(emotionContainer,'br');
-      appendHTML(emotionContainer,'h3', `${emotion} often indicates a need for ${currentEmotionData.coreNeed}. I will try... [optional] `);
+      appendHTML(emotionContainer,'h3', `I need ${currentEmotionData.coreNeed}. I will try... [optional] `);
 
       const nuancedNeedsGroupDiv = appendHTML(emotionContainer,'div');
       nuancedNeedsGroupDiv.setAttribute(
@@ -486,7 +495,6 @@
     });
 
     loadDataset();
-
 
   </script>
 
