--- a/index.html
+++ b/index.html
@@ -8,6 +8,35 @@
 <body>
   <main role="main">
     <h1>Emotion Identification Tool</h1>
+    <p>This tool is a screen-reader-friendly version of the Emotion Wheel, created by Abby Vanmuijen. You can see her original version <a href="https://www.avanmuijen.com/watercolor-emotion-wheel">here</a>.</p>
+     <details>
+      <summary>How to use this tool</summary>
+      <p>You can use this tool in two ways: to reflect on your current emotions, or to explore and learn about emotions in general.</p>
+    <ol>
+      <li><strong>Body sensations.</strong> The first page shows groups of body sensations in three areas: head, torso, and limbs.</li>
+        <ul>
+          <li>Scan your body and choose any sensations you notice.</li>
+          <li>The tool will then show you emotions that are often linked to the sensations you selected.</li>
+          <li>If you do not want to choose sensations, click the button that says “Skip and explore all emotions.” This will let you view every emotion in the tool.</li>
+        </ul>
+      <li><strong>Core emotions.</strong> Next, each page shows one core emotion.</li>
+        <ul>
+          <li>You will see:</li>
+          <ul>
+            <li>Body sensations linked to that emotion</li>
+            <li>Specific feelings or subtypes of that emotion</li>
+            <li>Needs that the emotion might point to</li>
+          </ul>
+          <li>Select any feelings or needs that seem true for you in the moment.</li>
+        </ul>
+      <li><strong>Summary.</strong>The final page shows a summary of everything you selected. This makes it easy to review and reflect.</li>
+        <ul>
+          <li>
+            You can also click a button to copy all the text and paste it somewhere else, such as a journal or a message to a friend.
+          </li>
+        </ul>
+    </ol>
+    </details>
 
     <form id="emotionForm" onsubmit="return false;">
 
