--- a/emotionWheel.html
+++ b/emotionWheel.html
@@ -152,7 +152,7 @@
       "Sadness": {
           "description": "isolation and grief",
           "sensations": {
-          "head": ["heavy/numb eyes/mouth/face","crying/release of water/fluid","wailling"],
+          "head": ["heavy/numb eyes/mouth/face","crying/release of water/fluid","wailing"],
           "torso":["heavy heart & breath","\"welling up\" - chest/stomach pressure","cold"],
           "limbs":["heavy limbs","numbness/lack of sensation"]
         },
@@ -280,6 +280,7 @@
         emotionContainer.innerHTML =
           `<h2>You did not select any sensations.</h2>
           <p>Go back to select body sensations or explore all emotions.</p>`;
+          setTimeout(()=> emotionContainer.focus());
         return;
       }
       nextEmotionBtn.classList.remove("hidden");
@@ -321,7 +322,7 @@
           emotion.slice(1)} can include ${currentEmotionData.sensations.join(", ")}.`
       }
       appendHTML(emotionContainer,'p',description + ' ' + sensationText);
-      appendHTML(emotionContainer,'h3','More specifically, I feel... [optional]');
+      appendHTML(emotionContainer,'h3','More specifically, I feel... ');
 
       const nuancedEmotionsGroupDiv = appendHTML(emotionContainer,'div');
       nuancedEmotionsGroupDiv.className = "checkbox-group";
@@ -338,7 +339,7 @@
       });
 
       appendHTML(emotionContainer,'br');
-      appendHTML(emotionContainer,'h3', `I need ${currentEmotionData.coreNeed}. I will try... [optional] `);
+      appendHTML(emotionContainer,'h3', `I need ${currentEmotionData.coreNeed}. I will try...`);
 
       const nuancedNeedsGroupDiv = appendHTML(emotionContainer,'div');
       nuancedNeedsGroupDiv.setAttribute(
@@ -456,7 +457,7 @@
         }
 
         appendHTML(ul,'li',nuancedText);
-        const needs = appendHTML(ul,'li', `I need <b>${emotionData[emotion].coreNeed}</b>:`);
+        const needs = appendHTML(ul,'li', `I need <b>${emotionData[emotion].coreNeed}</b>. I've decided to:`);
         const needsNested = appendHTML(needs,'ul');
         needsNested.className = 'checkbox-list';
 
@@ -470,7 +471,7 @@
         }
       });
 
-      setTimeout(()=>h2.focus());
+      setTimeout(() => summaryContainer.focus());
     }
 
     step3BackBtn.addEventListener('click', () => {
